added support for easily building the docker image using different models: we assume they are all BERT_en_GB:en and the one we want gets copied into models/cloud_docker when we build the docker image so at run time we don't care which model is actually being used

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3-slim
 
+ARG LANGUAGE
+
 # Install tini and create an unprivileged user
 ADD https://github.com/krallin/tini/releases/download/v0.19.0/tini /sbin/tini
 RUN addgroup --gid 1001 "elg" && \
@@ -19,7 +21,7 @@ WORKDIR /elg
 RUN python -mvenv venv && venv/bin/pip --no-cache-dir install -r requirements.txt
 
 COPY --chown=elg:elg resources /elg/resources
-COPY --chown=elg:elg models /elg/models
+COPY --chown=elg:elg models/BERT_$LANGUAGE /elg/models/cloud_docker
 
 COPY --chown=elg:elg StanceClassifier /elg/StanceClassifier
 COPY --chown=elg:elg docker/elg_stance.py docker/docker-entrypoint.sh resources.txt /elg/
