removed the chown options from COPY so it will work on older docker versions

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3-slim
+FROM python:3.7-slim
 
 ARG LANGUAGE
 
@@ -10,7 +10,7 @@ RUN addgroup --gid 1001 "elg" && \
       chmod +x /sbin/tini
 
 # Copy in our app, its requirements file and the entrypoint script
-COPY --chown=elg:elg requirements.txt /elg/
+COPY requirements.txt /elg/
 
 # Everything from here down runs as the unprivileged user account
 USER elg:elg
@@ -20,11 +20,11 @@ WORKDIR /elg
 # Create a Python virtual environment for the dependencies
 RUN python -mvenv venv && venv/bin/pip --no-cache-dir install -r requirements.txt
 
-COPY --chown=elg:elg resources /elg/resources
-COPY --chown=elg:elg models/BERT_$LANGUAGE /elg/models/cloud_docker
+COPY resources /elg/resources
+COPY models/BERT_$LANGUAGE /elg/models/cloud_docker
 
-COPY --chown=elg:elg StanceClassifier /elg/StanceClassifier
-COPY --chown=elg:elg docker/elg_stance.py docker/docker-entrypoint.sh resources.txt /elg/
+COPY StanceClassifier /elg/StanceClassifier
+COPY docker/elg_stance.py docker/docker-entrypoint.sh resources.txt /elg/
 
 ENV WORKERS=1 REQUEST_SIZE_LIMIT=100000
 
