Moved the ARG for better layer sharing

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,5 @@
 FROM python:3.7-slim
 
-ARG LANGUAGE
-
 # Install tini and create an unprivileged user
 ADD https://github.com/krallin/tini/releases/download/v0.19.0/tini /sbin/tini
 RUN addgroup --gid 1001 "elg" && \
@@ -9,7 +7,7 @@ RUN addgroup --gid 1001 "elg" && \
       --home /elg --ingroup elg --uid 1001 elg && \
       chmod +x /sbin/tini
 
-# Copy in our app, its requirements file and the entrypoint script
+# Copy in requirements file for the venv
 COPY requirements.txt /elg/
 
 # Everything from here down runs as the unprivileged user account
@@ -20,7 +18,11 @@ WORKDIR /elg
 # Create a Python virtual environment for the dependencies
 RUN python -mvenv venv && venv/bin/pip --no-cache-dir install -r requirements.txt
 
+# Resources are shared across all models
 COPY resources /elg/resources
+
+# Copy in the relevant model
+ARG LANGUAGE
 COPY models/BERT_$LANGUAGE /elg/models/cloud_docker
 
 COPY StanceClassifier /elg/StanceClassifier
