--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -35,7 +35,7 @@ COPY StanceClassifier /elg/StanceClassifier
 COPY docker/elg_stance.py docker/docker-entrypoint.sh resources.txt /elg/
 
 # Run one classify, to pre-cache any download-on-first-use things
-RUN ["venv/bin/python", "-c", "from StanceClassifier.stance_classifier import StanceClassifier\nStanceClassifier().classify({'text':'original'},{'text':'reply'})"]
+RUN ["venv/bin/python", "-c", "from StanceClassifier.stance_classifier import StanceClassifier\nStanceClassifier().classify({'text':'reply'})"]
 
 ENV WORKERS=1 REQUEST_SIZE_LIMIT=100000
 
