Update dockerfile and build infrastructure

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,17 +1,20 @@
-FROM python:3.7-slim
+FROM python:3.12-slim as base
 
 # Install tini and create an unprivileged user
-ADD https://github.com/krallin/tini/releases/download/v0.19.0/tini /sbin/tini
-RUN addgroup --gid 1001 "elg" && \
-      adduser --disabled-password --gecos "ELG User,,," \
+RUN apt-get update && \
+    apt-get install -y \
+      tini \
+    && rm -rf /var/lib/apt/lists/* && \
+    addgroup --gid 1001 "elg" && \
+    adduser --disabled-password --gecos "ELG User,,," \
       --home /elg --ingroup elg --uid 1001 elg && \
-      chmod +x /sbin/tini
+    install -m 700 -g 1001 -o 1001 -d /elg/.cache
 
 # Copy in requirements file for the venv
 COPY requirements.txt /elg/
 
 # Everything from here down runs as the unprivileged user account
-USER elg:elg
+USER 1001:1001
 
 WORKDIR /elg
 
@@ -24,19 +27,20 @@ WORKDIR /elg
 # torch can cache it's downloads in the normal place
 RUN --mount=type=cache,target=/elg/.pip-cache,uid=1001 python -mvenv venv && venv/bin/pip --cache-dir /elg/.pip-cache install -r requirements.txt
 
-# Resources are shared across all models
-COPY resources /elg/resources
-
-# Copy in the relevant model
-ARG MODEL
-COPY models/$MODEL /elg/models/$MODEL
-
 COPY StanceClassifier /elg/StanceClassifier
-COPY docker/elg_stance.py docker/docker-entrypoint.sh resources.txt /elg/
+COPY docker/elg_stance.py docker/docker-entrypoint.sh /elg/
+
+ENTRYPOINT ["./docker-entrypoint.sh"]
+
+FROM base as oblivious
 
 # Run one classify, to pre-cache any download-on-first-use things
 RUN ["venv/bin/python", "-c", "from StanceClassifier.stance_classifier import StanceClassifier\nStanceClassifier().classify({'text':'reply'})"]
 
-ENV WORKERS=1 REQUEST_SIZE_LIMIT=100000
+ENV WORKERS=1 REQUEST_SIZE_LIMIT=100000 HF_HUB_OFFLINE=1 HF_DATASETS_OFFLINE=1 STANCE_CLASSIFIER_MODE=oblivious
 
-ENTRYPOINT ["./docker-entrypoint.sh"]
+FROM base as aware
+
+RUN ["venv/bin/python", "-c", "from StanceClassifier.stance_classifier import StanceClassifierEnsemble\nStanceClassifierEnsemble().classify_with_target({'text':'reply', 'id_str':'2', 'in_reply_to_status_id_str':'1'}, {'text':'orig', 'id_str':'1'})"]
+
+ENV WORKERS=1 REQUEST_SIZE_LIMIT=100000 HF_HUB_OFFLINE=1 HF_DATASETS_OFFLINE=1 STANCE_CLASSIFIER_MODE=aware
