--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -10,6 +10,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Buildx cache
         uses: actions/cache@v4
         with:
